--- a/styles.css
+++ b/styles.css
@@ -451,3 +451,82 @@ a{
     background-image: url(/Images/projects/Project4.png);
 }
 
+
+/* media queries */
+@media (width <= 1200px ) {
+    
+    .nav-bar{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero-section{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+    
+    .project-section{
+        flex-direction: column;
+    }
+
+    /* .project-card{
+        width: 100%;
+    } */
+
+    #project1{
+        width: 100%;
+    }
+    #project2{
+        margin-left: 0;
+        width: 100%;
+    }
+    #project3{
+        width: 100%;
+    }
+    #project4{
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .project-content{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        scale: 0.5;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+    }
+    .project-content-left{
+        right: 0;
+        left: 0;
+    }
+    .project-content-right{
+        right: 0;
+        left: 0;
+    }
+    .hero-section-left{
+        justify-content: center;
+        align-items: center;
+    }
+    .project-card{
+        background-size: cover;
+        background-position: center;
+    }
+    .project-card {
+        width: 100%;
+        height: 300px;
+    }
+
+    .project-number{
+        font-size: 6rem;
+        right: 1px;
+    }
+    .project-number-left{
+        left:2px
+    }
+}
