--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     font-family: 'Be Vietnam Pro', sans-serif;
     scroll-behavior: smooth;
 }
@@ -101,6 +101,7 @@ a{
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
+    width: 50%;
 }
 
 .hero-section-heading{
@@ -163,8 +164,7 @@ a{
 /* hero-section-right  */
 .hero-section-right{
     position: relative;
-
-}
+}   
 
 .absolute{
     position:absolute;
@@ -537,7 +537,7 @@ a{
 .skills-container{
     display: flex;
     position: relative;
-    padding-block: 5rem;
+    padding: 5rem;
     margin: 10rem auto;
     gap: 30px;
 }
@@ -565,13 +565,16 @@ a{
     line-height: 50px;
 }
 
-.paragraph-1{
-    margin: 15px 0;
-}
-.paragraph{
-    width: 85%;
+.skill-subHeading{
+    margin-top: 1rem;
+    width:85%;
     text-align: justify;
 }
+
+.skill-subHeading p{
+  margin:15px 0;
+}
+
 
 .skills-container-right{
     display: flex;
@@ -592,20 +595,6 @@ a{
     transform: scale(1.2);
 }
 
-.skills-container-right::before{
-    content: "";
-    background-image: url(/Images/userAsset/blob\ vector.png);
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: -1;
-    background-repeat: no-repeat;
-    background-position: center;
-    animation: motion 4s infinite linear;
-}
-
 .faded-text-skills{
     position: absolute;
     font-size: 15em;
@@ -617,16 +606,129 @@ a{
 }
 
 @keyframes motion {
-    0%{
-        top: 0;
-        left: 0;
-    }
+   
     50%{
         top:54%;
         left:46%;
     }
-    100%{
-        top: 0;
-        left: 0;
-    }
+    
+}
+
+.blob{
+    position: absolute;
+    z-index: -1;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    animation: motion 3s infinite ;
+}
+
+/* contact section  */
+.contact-section{
+    background-color: rgb(231,231,231);
+}
+
+.contact-heading{
+    font-size: 5rem;
+    padding-top: 2rem;
+    color: var(--bgOrange);
+    font-weight: bold;
+}
+
+.contact-sub-heading{
+    font-size: 3rem;
+    color: #343d68aa;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin-top: 38px;
+}
+
+.form-section{
+    display: flex;
+    margin-top: 25px;
+    justify-content: center;
+    align-items: center
+}
+
+.form-item{
+    padding: 0 2rem;
+    font-size: 18px;
+    box-shadow: 2px 2px 10px #1f1f1f;
+    font-weight: 500;
+    border: none;
+    margin-top: 27px;
+    width: 100%;
+    height: 51px;
+    border-radius: 8px;
+    border: none;
+}
+
+.form-item-textarea{
+    height: auto;
+    padding-top: 1rem;
+    margin-bottom: 3rem  ;
+}
+
+.send-btn{
+    margin-bottom: 3rem;
+    /* border-radius: 8px; */
+    border: none;
+    font-size: 1.4rem;
+}
+
+.send-btn:hover{
+    border: none;
+    transform: scale(0.9);
+}
+
+.send-logo{
+   padding: 0 1rem;
+    font-size: 1.5rem;
+}
+
+/* footer section */
+.footer-section{
+    background-color: #343d68;
+    position: relative;
+    margin-top: -1px;
+    padding: 5rem;
+}
+
+.faded-text-footer{
+    position:absolute;
+    user-select: none;
+    font-size: 5rem;
+    color: #535c87;
+    left: 0;
+    bottom: 0;
+
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 1.2rem;
+    align-items: center;
+    width: 1155px;
+    gap: 1rem;
+}
+
+
+.logo-group{
+    display: flex;
+    gap: 1rem;
+}
+
+.nav-items-footer{
+    gap: 1.2rem;
+    display: flex;
+}
+.nav-items-footer div a{
+    color: white;
 }
